started work on daily scripts

--- a/get_stocks/get_stocks_clean.ipynb
+++ b/get_stocks/get_stocks_clean.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data successfully inserted.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -18,7 +26,7 @@
     "from google.oauth2 import service_account\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "load_dotenv(dotenv_path='/home/psor/testgit/test_project/get_stocks_raw/.env')\n",
+    "load_dotenv(dotenv_path='/home/psor/testgit/test_project/get_stocks/.env')\n",
     "\n",
     "STOCK_API_KEY = os.getenv('STOCK_API_KEY')\n",
     "PROJECT_ID = os.environ.get('PROJECT_ID')  \n",
@@ -82,18 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleaned data successfully inserted.\n"
+      "An error occurred: 400 Invalid project ID 'None'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.; reason: invalid, location: None.testdb_1.raw_stock_data, message: Invalid project ID 'None'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.\n",
+      "\n",
+      "Location: US\n",
+      "Job ID: 9c6f70f4-71d8-4222-aca5-94be088dd9e9\n",
+      "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "clean_stock_data()"
+   ]
   }
  ],
  "metadata": {
