--- a/fetch_stocks_raw/fetch_stocks_raw_notebook.ipynb
+++ b/fetch_stocks_raw/fetch_stocks_raw_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "import time\n",
     "import json\n",
     "from datetime import datetime\n",
-    "\n",
     "import requests\n",
     "from fastapi.responses import JSONResponse\n",
     "from google.cloud import bigquery\n",
@@ -19,7 +18,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "\n",
-    "load_dotenv(dotenv_path='/home/psor/testgit/test_project/get_stocks/.env')\n",
+    "load_dotenv(dotenv_path='/home/psor/testgit/test_project/fetch_stocks_raw/.env')\n",
     "\n",
     "STOCK_API_KEY = os.getenv('STOCK_API_KEY')\n",
     "PROJECT_ID = os.environ.get('PROJECT_ID')  \n",
@@ -30,7 +29,7 @@
     "\n",
     "table_id = f\"{PROJECT_ID}.testdb_1.raw_stock_data\"\n",
     "\n",
-    "def fetch_and_upload_raw_stock_data(stock_symbol: str, API_KEY: str):\n",
+    "def fetch_and_upload_raw_stock_data(stock_symbol):\n",
     "    try:\n",
     "        # Construct the API URL\n",
     "        url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={stock_symbol}&apikey={STOCK_API_KEY}\"\n",
@@ -47,7 +46,7 @@
     "                \"fetch_date\": fetch_date  \n",
     "            }\n",
     "        ]\n",
-    "        return data\n",
+    "        \n",
     "        errors = client.insert_rows_json(table_id, rows_to_insert)\n",
     "\n",
     "        if errors:\n",
@@ -64,93 +63,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latest day's raw data successfully inserted into BigQuery.\n"
+      "Rows successfully inserted.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import json\n",
-    "import requests\n",
-    "from datetime import datetime\n",
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "# Load environment variables\n",
-    "PROJECT_ID = os.getenv('PROJECT_ID')\n",
-    "credentials = service_account.Credentials.from_service_account_file(\n",
-    "    \"/mnt/c/Users/m_was/Downloads/tomastestproject-433206-48a55703dec2.json\")\n",
-    "client = bigquery.Client(credentials=credentials, project=PROJECT_ID)\n",
-    "\n",
-    "# BigQuery table ID\n",
-    "raw_data_table_id = f\"{PROJECT_ID}.testdb_1.raw_stock_data\"\n",
-    "\n",
-    "def fetch_and_upload_raw_stock_data(stock_symbol: str, API_KEY: str):\n",
-    "    try:\n",
-    "        # Construct the API URL\n",
-    "        url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={stock_symbol}&apikey={API_KEY}\"\n",
-    "        response = requests.get(url=url)\n",
-    "        response.raise_for_status()\n",
-    "        data = response.json()\n",
-    "\n",
-    "        # Extract the \"Time Series (Daily)\" part\n",
-    "        time_series_daily = data['Time Series (Daily)']\n",
-    "\n",
-    "          # Extract only the first dictionary from \"Time Series (Daily)\"\n",
-    "        latest_date = sorted(time_series_daily.keys())[-1]\n",
-    "        latest_data = {latest_date: time_series_daily[latest_date]}\n",
-    "\n",
-    "        # Prepare the row to insert\n",
-    "        row_to_insert = {\n",
-    "            \"stock_symbol\": stock_symbol,\n",
-    "            \"raw_data\": json.dumps(latest_data),\n",
-    "            \"fetch_date\": datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
-    "        }\n",
-    "\n",
-    "        \n",
-    "\n",
-    "\n",
-    "        # Insert the row into BigQuery\n",
-    "        errors = client.insert_rows_json(raw_data_table_id, [row_to_insert])\n",
-    "        if errors:\n",
-    "            print(f\"Encountered errors while inserting rows: {errors}\")\n",
-    "        else:\n",
-    "            print(\"Latest day's raw data successfully inserted into BigQuery.\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "\n",
-    "# Example usage\n",
-    "if __name__ == \"__main__\":\n",
-    "    STOCK_API_KEY = \"your_api_key_here\"\n",
-    "    fetch_and_upload_raw_stock_data(\"TSLA\", STOCK_API_KEY)"
+    "fetch_and_upload_raw_stock_data(\"KMWKWKRJWURJKSKJ\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fetch_and_upload_raw_stock_data(\"TSLA\", STOCK_API_KEY)"
+    "        \n",
+    "        # Prepare data for insertion\n",
+    "        rows_to_insert = [\n",
+    "            {\n",
+    "                \"stock_symbol\": stock_symbol,\n",
+    "                \"raw_data\": json.dumps(data),\n",
+    "                \"fetch_date\": fetch_date  \n",
+    "            }\n",
+    "        ]\n",
+    "        \n",
+    "        errors = client.insert_rows_json(table_id, rows_to_insert)\n",
+    "\n",
+    "        if errors:\n",
+    "            print(f\"Encountered errors while inserting rows: {errors}\")\n",
+    "        else:\n",
+    "            print(\"Rows successfully inserted.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n"
    ]
   }
  ],
