--- a/fetch_stocks_raw/fetch_stocks_raw_notebook.ipynb
+++ b/fetch_stocks_raw/fetch_stocks_raw_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "fetch_and_upload_raw_stock_data(\"KMWKWKRJWURJKSKJ\") "
+    "fetch_and_upload_raw_stock_data(\"MSFT\") "
    ]
   },
   {
