fixed get secret and project id on clean_stocks

--- a/transform_stocks/clean_stocks.ipynb
+++ b/transform_stocks/clean_stocks.ipynb
@@ -13,17 +13,47 @@
     "from google.cloud import secretmanager\n",
     "import uvicorn\n",
     "import logging\n",
+    "from google.auth import default\n",
     "\n",
     "app = FastAPI()\n",
     "\n",
-    "def get_secret(secret_name: str) -> str:\n",
-    "    \"\"\"Fetches a secret from Google Cloud Secret Manager.\"\"\"\n",
+    "def get_project_id():\n",
+    "    \"\"\"Retrieve project ID from environment.\"\"\"\n",
+    "    #GOOGLE_CLOUD_PROJECT: This specific environment variable is used to store the Google Cloud project ID. \n",
+    "    #It allows the application to know which Google Cloud project it should interact with.\n",
+    "    project_id = os.getenv('GOOGLE_CLOUD_PROJECT')\n",
+    "\n",
+    "    if project_id is None:\n",
+    "        # If not set, use google.auth.default to fetch the project ID\n",
+    "        credentials, project_id = default()\n",
+    "    \n",
+    "    return project_id\n",
+    "\n",
+    "\n",
+    "def get_secret(secret_name='bigquery-accout-secret') -> str:\n",
+    "    \"\"\"Fetches a secret from Google Cloud Secret Manager.\n",
+    "\n",
+    "    Args:\n",
+    "        secret_name (str): The name of the secret in Secret Manager.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The secret data as a string.\n",
+    "    \"\"\"\n",
+    "    # Instansiera en klient för Secret Manager\n",
     "    client = secretmanager.SecretManagerServiceClient()\n",
-    "    project_id = 'tomastestproject-433206'\n",
+    "\n",
+    "    # Bygg sökvägen till den hemlighet du vill hämta\n",
+    "    project_id = get_project_id()  # Ersätt med ditt projekt-ID\n",
     "    secret_path = f\"projects/{project_id}/secrets/{secret_name}/versions/latest\"\n",
+    "\n",
+    "    # Hämta den senaste versionen av hemligheten\n",
     "    response = client.access_secret_version(name=secret_path)\n",
+    "\n",
+    "    # Dekoda hemligheten till en sträng\n",
     "    secret_data = response.payload.data.decode('UTF-8')\n",
-    "    return secret_data\n"
+    "\n",
+    "    return secret_data\n",
+    "\n"
    ]
   },
   {
