fixed get secret and project id on clean_stocks

--- a/transform_stocks/clean_stocks.ipynb
+++ b/transform_stocks/clean_stocks.ipynb
@@ -72,13 +72,13 @@
     "    \"\"\"\n",
     "    rows_to_insert = []\n",
     "    for row in results:\n",
-    "        raw_data_str = row['raw_data']\n",
-    "        raw_data_json = json.loads(raw_data_str)\n",
-    "        time_series = raw_data_json.get(\"Time Series (Daily)\", {})\n",
+    "        stock_symbol = row.stock_symbol\n",
+    "        raw_data_str = row.raw_data \n",
+    "        time_series = raw_data_str.get(\"Time Series (Daily)\", {})\n",
     "        \n",
     "        for date, daily_data in time_series.items():\n",
     "                cleaned_row = {\n",
-    "                    \"stock_symbol\": row['stock_symbol'],\n",
+    "                    \"stock_symbol\": stock_symbol,\n",
     "                    \"date\": date,\n",
     "                    \"open\": float(daily_data[\"1. open\"]),\n",
     "                    \"high\": float(daily_data[\"2. high\"]),\n",
@@ -122,8 +122,7 @@
     "        raise HTTPException(status_code=500, detail=f\"An error occurred: {e}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    uvicorn.run(app, host=\"0.0.0.0\", port=8080)\n",
-    "\n"
+    "    uvicorn.run(app, host=\"0.0.0.0\", port=8080)\n"
    ]
   },
   {
